force scrollbar to prevent jumping content

--- a/src/layouts/index.css
+++ b/src/layouts/index.css
@@ -1,5 +1,9 @@
 @import '../../node_modules/normalize.css';
 
+html {
+  overflow-y: scroll;
+}
+
 body {
   font-family: "Source Code Pro", monospace;
   font-weight: 400;
